# transfermatrix

./: README.md  pyproject.toml
notebooks/: rta_calculation.ipynb  test.py
notebooks/materials/: air.csv  glass.csv
src/transfermatrix/: TransferMatrix.py  cli.py  input.py  interfaces.py  transfermatrix.py
